@@ -1,3 +1,7 @@
+2002-05-17  Muktha  <muktha.narayan@wipro.com>
+
+	* src/gtkhex.c: Enable selection through keyboard.
+
 2002-05-13  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added Vietnamese (vi) file
